--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@types/node": "^25.0.10",
     "@types/react": "^19.2.8",
     "react": "^19.2.3"
   }
